--- a/requirements.txt
+++ b/requirements.txt
@@ -6,4 +6,12 @@ pydantic==2.5.0
 pytest==7.4.3
 httpx==0.25.0
 pytest-cov==4.1.0
+pytest-asyncio==0.21.1
+sqlalchemy==2.0.23
+alembic==1.13.0
+psycopg2-binary==2.9.9
+asyncpg==0.29.0
+aiosqlite==0.19.0
+python-dotenv==1.0.0
+greenlet==3.0.3
 
