--- a/requirements.txt
+++ b/requirements.txt
@@ -14,4 +14,8 @@ asyncpg==0.29.0
 aiosqlite==0.19.0
 python-dotenv==1.0.0
 greenlet==3.0.3
+redis==5.0.1
+prometheus-client==0.19.0
+python-multipart==0.0.6
+fakeredis==2.20.1
 
