--- a/monitoring/prometheus.yml
+++ b/monitoring/prometheus.yml
@@ -8,7 +8,7 @@ global:
 scrape_configs:
   - job_name: 'mlapi'
     static_configs:
-      - targets: ['host.docker.internal:8000']
+      - targets: ['api:8000']
     metrics_path: '/metrics/'
     scrape_interval: 15s
     scrape_timeout: 10s
