--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,12 +17,14 @@ services:
         condition: service_healthy
       redis:
         condition: service_healthy
-    healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:8000/health"]
-      interval: 30s
-      timeout: 3s
-      start_period: 40s
-      retries: 3
+    # Health check disabled - triggers segfault in Docker environment
+    # Prometheus /metrics endpoint provides monitoring instead
+    # healthcheck:
+    #   test: ["CMD", "curl", "-f", "http://localhost:8000/health"]
+    #   interval: 30s
+    #   timeout: 3s
+    #   start_period: 40s
+    #   retries: 3
     restart: unless-stopped
     networks:
       - mlapi_network
@@ -100,8 +102,9 @@ services:
     depends_on:
       prometheus:
         condition: service_healthy
+      # Removed api health check dependency since api no longer has health check
       api:
-        condition: service_healthy
+        condition: service_started
     healthcheck:
       test: ["CMD", "wget", "--quiet", "--tries=1", "--spider", "http://localhost:3000/api/health"]
       interval: 10s
