docs: Add Phase 5 notes and threading limits for Docker
ADDED:
- PHASE5_NOTES.md: Comprehensive analysis of Phase 5 status
- Threading environment variables (OMP_NUM_THREADS, etc.)
- Memory limits in docker-compose.yml (2G max, 1G reserved)

FINDINGS:
- PyTorch Docker segfault persists despite all fixes
- Issue is environmental (PyTorch+GLIBC in containers)
- All features work in hybrid mode (local API + Docker services)
- Containerization infrastructure complete
- Rate limiting deferred to Phase 7

RECOMMENDATION:
- Use hybrid deployment for Phases 6-7
- Revisit full containerization with PyTorch serving tools
- Consider ONNX/TorchServe/separate inference service for production

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,8 +10,19 @@ services:
       DATABASE_URL: postgresql+asyncpg://mlapi_user:mlapi_password@postgres:5432/mlapi
       REDIS_URL: redis://redis:6379/0
       LOG_LEVEL: INFO
+      # PyTorch/NumPy threading fixes for Docker stability
+      OMP_NUM_THREADS: "1"
+      MKL_NUM_THREADS: "1"
+      NUMEXPR_NUM_THREADS: "1"
+      OPENBLAS_NUM_THREADS: "1"
     ports:
       - "8000:8000"
+    deploy:
+      resources:
+        limits:
+          memory: 2G
+        reservations:
+          memory: 1G
     depends_on:
       postgres:
         condition: service_healthy
