fix: Apply PyTorch Docker fixes (shm_size, tokenizers, torch.no_grad, CPU mode)
APPLIED FIXES:
1. Added shm_size: 8gb to docker-compose.yml
2. Set TOKENIZERS_PARALLELISM=false environment variable
3. Wrapped predictions in torch.no_grad() context manager
4. Added explicit gc.collect() after inference
5. Forced CPU mode with device=-1 in pipeline

RESULT:
- GET endpoints work (health check successful)
- Models load successfully in Docker
- POST /predict still crashes with exit 139 (segfault)
- Silent crash at C library level, no Python traceback

CONCLUSION:
PyTorch Docker issue persists despite all documented fixes.
Hybrid deployment (local API + Docker services) remains recommended.
Full Docker ML inference requires specialized serving tools:
- TorchServe
- ONNX Runtime
- Different base images (nvidia/pytorch, etc.)
- Separate inference microservice

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,8 +15,11 @@ services:
       MKL_NUM_THREADS: "1"
       NUMEXPR_NUM_THREADS: "1"
       OPENBLAS_NUM_THREADS: "1"
+      # HuggingFace tokenizer parallelism fix
+      TOKENIZERS_PARALLELISM: "false"
     ports:
       - "8000:8000"
+    shm_size: '8gb'
     deploy:
       resources:
         limits:
