--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
 fastapi==0.104.1
 uvicorn[standard]==0.24.0
 transformers==4.35.0
-torch==2.1.0
+# PyTorch CPU-only (more stable in Docker containers)
+--extra-index-url https://download.pytorch.org/whl/cpu
+torch==2.6.0+cpu
 pydantic==2.5.0
 pytest==7.4.3
 httpx==0.25.0
