--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,7 @@ services:
       MKL_NUM_THREADS: "4"
       TORCH_NUM_THREADS: "4"
       TORCH_NUM_INTEROP_THREADS: "1"
+      # TESTING: "1"  # Only for pytest, not production/load testing
     ports:
       - "8000:8000"
     depends_on:
