--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 fastapi==0.104.1
 uvicorn[standard]==0.24.0
 transformers==4.35.0
+--extra-index-url https://download.pytorch.org/whl/cpu
 torch==2.1.0
 numpy<2
 pydantic==2.5.0
